# AI-desktop-pet

./: .gitignore  ARCHITECTURE_V2.md  FASTAPI_INTEGRATION.md  PROJECT_DOCUMENTATION.md  PROJECT_STRUCTURE.md  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  start.bat  start.ps1  tsconfig.json  tsconfig.node.json  vite.config.ts  如何添加新功能.md  快速上手.md  快速上手指南.md  项目框架.md  项目框架说明.md  项目概况.md
apps/pet/: call.html  capture-selector.html  chat.html  index.html  package.json  proactive.html  settings.html  translate-overlay.html  tsconfig.json  vite.config.ts
apps/pet/src-tauri/: Cargo.toml
apps/pet/src-tauri/capabilities/: default.json
apps/pet/src-tauri/src/: audio_capture.rs  audio_playback.rs  commands.rs  desktop_services.rs  lib.rs  shortcut_manager.rs
backend-python/: .gitignore  README.md  config.yaml  manage_backend_env.py  requirements-memory.txt  requirements-ml.txt  requirements-perception.txt  requirements-screen.txt  requirements-voice.txt  requirements.txt  setup_memory.py  test_client.py  websocket_server.py
backend-python/services/: chat_service.py  emotion_service.py  memory_service.py  personality_service.py  screenshot_service.py  style_service.py  vision_service.py  voice_service.py
backend-python/utils/: model_loader.py
crates/tauri/: Cargo.toml  tauri.conf.json
crates/tauri/capabilities/: default.json
crates/tauri/src/: lib.rs  main.rs
src/: App.vue  SettingsApp.vue  main.ts  settings-main.ts  vite-env.d.ts
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
(+63 files in other folders)
