[package]
name = "table-pet-tauri"
version = "0.1.0"
description = "桌面宠物 Tauri 后端"
authors = ["you"]
edition = "2021"

[lib]
name = "table_pet_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
