[package]
name = "table-pet-tauri"
version = "0.1.0"
description = "桌面宠物 Tauri 后端"
authors = ["you"]
edition = "2021"

[lib]
name = "table_pet_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
base64 = "0.22"
cpal = "0.15"
rodio = "0.19"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
arboard = "3.6.1"
battery = "0.7.8"
chrono = { version = "0.4.38", default-features = false, features = ["clock"] }
sysinfo = "0.30.13"
walkdir = "2"
reqwest = { version = "0.12.7", default-features = false, features = ["blocking", "rustls-tls"] }
scraper = "0.20.0"
tauri-plugin-global-shortcut = "2.3.1"
screenshots = "0.8.10"
image = { version = "0.24.9", default-features = false, features = ["png"] }
